@@ -157,6 +157,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       functionality "for real", not just as a dry-run.
     - macbuild.sh: spelling fix.
     - macbuild.sh: more more debug messages and a whitespace change.
+    - macbuild.sh: fix removal of base prefix in deduplication if base prefix
+      ends in a slash.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
